<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    tools:context=".ProfileActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="20dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="8dp"
                tools:ignore="MissingConstraints">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/img_circle"
                        android:layout_width="120dp"
                        android:layout_height="150dp"
                        android:src="@drawable/my_photo"
                        android:layout_gravity="center_horizontal" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/full_name"
                        />
                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:cardCornerRadius="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="20dp"
                        android:fontFamily="@font/alegreya_bold"
                        android:text="@string/detail_profil"
                        android:textSize="30sp" />

                    <LinearLayout
                        android:id="@+id/ln_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toBottomOf="@+id/lnProfile">

                        <ImageView
                            android:id="@+id/img_username"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            app:srcCompat="@drawable/ic_user"
                            tools:ignore="VectorDrawableCompat"
                            android:contentDescription="@string/todo"
                            android:layout_marginStart="10dp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_judul_username"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:layout_marginLeft="5dp"
                                android:layout_marginTop="10dp"
                                android:fontFamily="@font/alegreya_bold"
                                android:text="@string/username" />

                            <TextView
                                android:id="@+id/tv_username"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:layout_marginLeft="5dp"
                                android:fontFamily="@font/alegreya"
                                android:text="@string/username_info" />
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/ln_test2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toBottomOf="@+id/lnProfile">

                        <ImageView
                            android:id="@+id/img_test2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            app:srcCompat="@drawable/ic_email"
                            tools:ignore="VectorDrawableCompat"
                            android:contentDescription="@string/todo"
                            android:layout_marginStart="10dp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_judul_test2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:layout_marginLeft="5dp"
                                android:layout_marginTop="10dp"
                                android:fontFamily="@font/alegreya_bold"
                                android:text="@string/email" />

                            <TextView
                                android:id="@+id/tv_username_test2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:layout_marginLeft="5dp"
                                android:fontFamily="@font/alegreya"
                                android:text="@string/email_info" />
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/ln_username_test3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toBottomOf="@+id/lnProfile">

                        <ImageView
                            android:id="@+id/img_username_test3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            app:srcCompat="@drawable/ic_phone"
                            tools:ignore="VectorDrawableCompat"
                            android:contentDescription="@string/todo"
                            android:layout_marginStart="10dp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_judul_username_test3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:layout_marginLeft="5dp"
                                android:layout_marginTop="10dp"
                                android:fontFamily="@font/alegreya_bold"
                                android:text="@string/phone" />

                            <TextView
                                android:id="@+id/tv_username_test3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:layout_marginLeft="5dp"
                                android:fontFamily="@font/alegreya"
                                android:text="@string/phone_info" />
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/ln_username_test4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toBottomOf="@+id/lnProfile">

                        <ImageView
                            android:id="@+id/img_username_test4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            app:srcCompat="@drawable/ic_address"
                            tools:ignore="VectorDrawableCompat"
                            android:contentDescription="@string/todo"
                            android:layout_marginStart="10dp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_judul_username_test4"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:layout_marginLeft="5dp"
                                android:layout_marginTop="10dp"
                                android:fontFamily="@font/alegreya_bold"
                                android:text="@string/address" />

                            <TextView
                                android:id="@+id/tv_username_test4"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:layout_marginLeft="5dp"
                                android:fontFamily="@font/alegreya"
                                android:text="@string/address_info" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</androidx.drawerlayout.widget.DrawerLayout>
